# eversend-unofficial

./: .gitignore  README.md  pyproject.toml  setup.py
eversend/: eversend.py
eversend_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
