[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="0xdave", email="info@davidmarko.me" },
]
description = "Unofficial SDK for Eversend Business Platform"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/david-marko/eversend-unofficial"
"Bug Tracker" = "https://github.com/david-marko/eversend-unofficial/issues"